[project]
name = "test-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.115.12",
    "langchain==0.3.23",
    "langchain-chroma>=0.2.2",
    "langchain-community==0.3.21",
    "langchain-openai==0.3.12",
    "langgraph==0.3.27",
    "libmagic==1.0",
    "python-dotenv==1.1.0",
    "unstructured==0.17.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
